--- a/analytic_study.qmd
+++ b/analytic_study.qmd
@@ -177,7 +177,7 @@ Let:
 ## One Population
 
 We consider a single population with outbreak probability $p$, outbreak
-cost $C_I$, vaccination cost $C_V$, and reactive vaccination effectiveness $r \in [0,1]$. The outbreak cost
+cost $C_I$, vaccination cost $C_V$, pre-emptive vaccination effectiveness $\nu \in [0,1]$, and reactive vaccination effectiveness $r \in [0,1]$. The outbreak cost
 $C_I$ reflects direct medical costs, productivity losses, and
 mortality-related losses. The vaccination cost $C_V$ includes
 vaccine and delivery costs.
@@ -188,14 +188,14 @@ where $X=1$ if an outbreak occurs and $X=0$ otherwise.
 ### Pre-emptive strategy
 
 Under pre-emptive vaccination, the population is vaccinated regardless
-of whether an outbreak occurs. Any potential outbreak is fully averted,
-so the total cost is deterministic:
+of whether an outbreak occurs. Outbreak cost is $(1-\nu) C_I$ if an
+outbreak occurs, and $0$ otherwise. So the total cost random variable is:
 
 $$
 C_{\mathrm{pre}}(X) = C_V + (1-\nu) X C_I.
 $$
 
-Thus,
+Taking expectation,
 
 $$
 \mathbb{E}[C_{\mathrm{pre}}] = C_V + p (1-\nu) C_I.
@@ -219,8 +219,7 @@ $$
 = p\bigl(C_V + (1-r)C_I\bigr).
 $$
 
-This calculation assumes no penalty or loss from unused vaccine stock.
-In practice, vaccine expiry or wastage may incur additional costs, but
+This calculation assumes no penalty or loss from unused vaccine stock. In practice, vaccine expiry may incur additional costs, but
 these are omitted here for analytical clarity.
 
 ### Normalized Per-Population Expected Costs
@@ -296,17 +295,20 @@ In the figure below, $c_s^{(1)}$ denotes the normalized per-population
 expected cost for strategy $s \in \{\mathrm{pre}, \mathrm{react}\}$.
 
 Key insights:
+
 1.  **Cost sensitivity:** The expected cost of pre-emptive vaccination is less sensitive to the outbreak probability $p$ than reactive vaccination, remaining constant if $\nu = 1$.
+
 2.  **Economic critical value:** The critical probability $p_{\mathrm{crit}}^{(1)}$ identifies the risk level where both strategies are equivalent; reactive vaccination is economically optimal when $p < p_{\mathrm{crit}}^{(1)}$.
+
 3.  **Effectiveness impact:** The critical probability $p_{\mathrm{crit}}^{(1)}$ increases with the effectiveness of reactive vaccination $r$, or as the effectiveness gap $\nu - r$ decreases.
 
-Functions `cost_pre_one`, `cost_react_one`, and `p_star_one` are defined in `R/analytic_utils.R`.
 
 ```{r}
 # --- Parameters for the illustration ---
 p_vals <- seq(0, 1, 0.01) # mean outbreak probability
 R_vals <- c(5)
 r_vals <- c(0.3, 0.7)
+nu_val <- 0.9
 
 df_cost <- expand.grid(
     p = p_vals,
@@ -314,8 +316,8 @@ df_cost <- expand.grid(
     R = R_vals
 ) |>
     dplyr::mutate(
-        c_pre   = cost_pre_one(p, R, r, nu = 1),
-        c_react = cost_react_one(p, R, r, nu = 1),
+        c_pre   = cost_pre_one(p, R, r, nu = nu_val),
+        c_react = cost_react_one(p, R, r, nu = nu_val),
         r_label = paste0("italic(r)==", r)
     ) |>
     tidyr::pivot_longer(
@@ -348,11 +350,12 @@ df_pstar <- expand.grid(r = r_vals, R = R_vals) |>
     )
 
 # data for braces
-
+cost_preempt_max <- max(filter(df_cost, strategy == "Pre-emptive (\u03bd=1)", r_label == "italic(r)==0.3")$cost)
 cost_react_max1 <- max(filter(df_cost, strategy == "Reactive", r_label == "italic(r)==0.7")$cost)
 cost_react_max2 <- max(filter(df_cost, strategy == "Reactive", r_label == "italic(r)==0.3")$cost)
-df_brace1 <- data.frame(x = c(0.96, 1), y = c(1, cost_react_max1))
-df_brace2 <- data.frame(x = c(0.97, 1), y = c(1, cost_react_max2))
+
+df_brace1 <- data.frame(x = c(0.96, 1), y = c(cost_preempt_max, cost_react_max1))
+df_brace2 <- data.frame(x = c(0.97, 1), y = c(cost_preempt_max, cost_react_max2))
 df_brace3 <- data.frame(x = c(0, 0.03), y = c(0, 1))
 
 # convenient variables for the overhead-cost text position
@@ -528,8 +531,8 @@ plt
 #### $p_{\mathrm{crit}}^{(1)}$ as a function of $R$ for $r=0.5$.
 
 ```{r}
-r_vals <- c(0.3, 0.5, 0.7)
-R_vals <- seq(0.1, 50, by = 0.1)
+r_vals <- c(0.3, 0.7)
+R_vals <- seq(0.1, 10, by = 0.1)
 
 data <- expand.grid(r = r_vals, R = R_vals) %>%
     dplyr::mutate(pstar = p_star_one(R = R, r = r, nu = 1))
@@ -541,6 +544,16 @@ ggplot(data, aes(x = R, y = pstar, color = factor(r))) +
         # y = expression("Threshold outbreak probability  " ~ italic(p)[thr]^(1)),
         y = expression("Outbreak probability  " ~ italic(p)),
         color = expression(italic(r))
+    ) +
+    annotate("text",
+        size = 4, x = 10, y = 1,
+        hjust = 1, vjust = 1,
+        label = "Pre-emptive favored"
+    ) +
+    annotate("text",
+        size = 4, x = 0.1, y = 0,
+        hjust = 0, vjust = 0,
+        label = "Reactive favored"
     ) +
     theme_light() +
     theme(legend.position = "top")
@@ -638,13 +651,13 @@ ggplot(df_heatmap, aes(x = R, y = r)) +
         axis.text = element_text(size = 12),
         legend.title = element_text(size = 14),
         legend.text = element_text(size = 12),
-        legend.key.height = unit(1.5, "cm") # Make legend bar taller
-    )
-```
+        legend.key.height = unit(1.5, "cm")) # Make legend bar taller
+ ```
 
+    
 ### Key Insight
 
-In a single population, the normalized cost of pre-emptive vaccination $c_{\mathrm{pre}}^{(1)}$ remains constant at $\nu = 1$, while the reactive cost $c_{\mathrm{react}}^{(1)}$ increases linearly with the outbreak probability $p$. Their intersection defines the critical threshold $p_{\mathrm{crit}}^{(1)}$, above which pre-emptive vaccination is more cost-effective. Pre-emptive strategies are favored when the cost ratio $R = C_I/C_V$ and $\nu - r$ is high. This analysis highlights the trade-off between certain upfront investment and the risk-weighted costs of a delayed response, assuming no overhead for unused vaccines.
+In a single population, the normalized cost of pre-emptive vaccination $c_{\mathrm{pre}}^{(1)}$ remains constant at $\nu = 1$, while the reactive cost $c_{\mathrm{react}}^{(1)}$ increases linearly with the outbreak probability $p$. Their intersection defines the critical threshold $p_{\mathrm{crit}}^{(1)}$, above which pre-emptive vaccination is more cost-effective. Pre-emptive strategies are favored when the cost ratio $R = C_I/C_V$ and the difference in vaccine effectiveness $\nu - r$ is large. This analysis highlights the trade-off between certain upfront investment and the risk-weighted costs of a delayed response, assuming no overhead for unused vaccines.
 
 ## Multiple populations with equal risk and limited vaccination capacity
 
@@ -660,10 +673,9 @@ not consider scenarios where all populations receive reduced coverage;
 instead, the capacity constraint applies solely to the number of
 populations that can be vaccinated.
 
-The superscript $(n)$ in $c_{\mathrm{pre}}^{(n)}$,
+The superscript in $c_{\mathrm{pre}}^{(n)}$,
 $c_{\mathrm{react}}^{(n)}$, and $c_{\mathrm{mixed}}^{(n)}$ indicates
-that these are normalized per-population costs in the $n$-population
-equal-risk setting.
+that these are normalized per-population costs in the $n$-population setting.
 
 We first consider two benchmark strategies that both respect the
 capacity constraint. We solve the model for large $n$ such that the
@@ -768,22 +780,17 @@ $$
 
 ### Visualization
 
-#### Functions
-
-Functions `cost_pre_multi`, `cost_react_multi`, `cost_diff_multi`, and `p_star_multi` are defined in `R/analytic_utils.R`.
-
-
 #### $c_{\mathrm{pre}}^{(n)}$ and $c_{\mathrm{react}}^{(n)}$
 
 The normalzied per-population expected cost linearly increases with $f$
 for the pre-emptive strategy whereas, in case of reactive strategy, it
-increases only up to a point where $f=p$ and then remains constant.
+increases only up to a point where $f=p$ and then remains constant. 
 
 ##### Low cost ratio ($R = 1$)
 
 Less severe outbreaks ($R = 1$) favor reactive vaccination unless the
 vaccine is not very effective and its efficacy is below the outbreak
-probability ($r < p$).
+probability ($r < p$). As previously noted, the relative performance of reactive versus pre-emptive strategies depends on the cost ratio $R$. We now visualize these impacts for both low and high $R$ scenarios.
 
 $p = 0.4, R = 1$.
 
