--- a/extension.qmd
+++ b/extension.qmd
@@ -1899,11 +1899,11 @@ ggplot(df_ps, aes(x = patch_size, y = mean_cost)) +
 
 This section explores how the proportional reduction parameter $r$ varies as a function of vaccination delay, campaign duration, and vaccine efficacy, using a standard SIR model.
 
-We model the dynamics of Susceptible ($S$), Infectious ($I$), Recovered ($R$), and Vaccinated ($V$) individuals. The vaccination campaign is implemented as a flow from $S$ to $V$ at a daily rate $\rho$ during the campaign window $[t_{\text{start}}, t_{\text{start}} + t_{\text{dur}}]$.
+We model the dynamics of Susceptible ($S$), Infectious ($I$), and Recovered ($R$) individuals. The vaccination campaign is implemented as a flow from $S$ to $R$ at a daily rate $\rho$ during the campaign window $[t_{\text{start}}, t_{\text{start}} + t_{\text{dur}}]$.
 
-To achieve a target vaccine coverage proportion $C$ over a campaign duration $D$, the required daily rate $\rho$ (applied to the remaining eligible population) is determined by:
+To achieve a target vaccine coverage proportion $C$ with vaccine efficacy $\nu$ over a campaign duration $D$, the daily rate $\rho$ (applied to the remaining eligible population) is determined by:
 $$
-\rho = -\frac{\ln(1 - C)}{D}
+\rho = -\frac{\ln(1 - \nu C)}{D}
 $$
 
 The proportional reduction $r$ is defined as:
@@ -1923,7 +1923,7 @@ params <- list(
     I0 = 10,
     R0 = 2.5,
     gamma = 0.2,
-    ve = 0.8,
+    ve = 0.8, # vaccine efficacy, nu
     coverage = target_coverage,
     vacc_duration = vacc_duration
 )
@@ -1945,9 +1945,9 @@ cases_novax <- tail(sim_novax$CumCases, 1)
 cases_vax <- tail(sim_vax$CumCases, 1)
 r_calc <- 1 - (cases_vax / cases_novax)
 
-print(paste0("Baseline Cases: ", round(cases_novax)))
-print(paste0("Vaccinated Cases: ", round(cases_vax)))
-print(paste0("Proportional Reduction r: ", round(r_calc, 3)))
+print(paste0("Baseline cases: ", round(cases_novax)))
+print(paste0("Vaccinated cases: ", round(cases_vax)))
+print(paste0("Proportional reduction r: ", round(r_calc, 3)))
 ```
 
 ## Sensitivity analysis: delay and efficacy
@@ -1964,11 +1964,12 @@ results$r <- NA
 
 for (i in seq_len(nrow(results))) {
     res <- calculate_r_ode(
-        N = params$N, I0 = params$I0, R0 = results$R0[i], gamma = params$gamma,
+        N = params$N, I0 = params$I0, R0 = results$R0[i],
+        gamma = params$gamma,
         vacc_start = results$delay[i],
         ve = results$ve[i],
         coverage = params$coverage,
-        vacc_duration = 10
+        vacc_duration = params$vacc_duration
     )
     results$r[i] <- res$r
 }
@@ -1978,10 +1979,10 @@ ggplot(results, aes(x = delay, y = r, color = factor(ve))) +
     geom_point() +
     facet_wrap(~R0, labeller = label_both) +
     labs(
-        title = "Impact of Vaccination Delay, Efficacy, and R0 on r",
-        x = "Vaccination Start Day",
-        y = "Proportional Reduction (r)",
-        color = "Vaccine Efficacy"
+        title = "Impact of vaccination delay, efficacy, and R0 on r",
+        x = "Vaccination start day",
+        y = "Proportional reduction (r)",
+        color = "Vaccine efficacy"
     ) +
     theme_light()
 ```
@@ -2032,7 +2033,6 @@ ive_res <- calculate_ive_ode(
 # Extract final IVE
 final_ive <- ive_res$ive
 print(paste("Final IVE from ODE:", round(final_ive, 4)))
-
 
 # 2. Compare case reductions
 # ODE Results
@@ -2155,9 +2155,6 @@ for (r0 in R0_vals) {
 df_res <- do.call(rbind, results_list)
 
 # Reshape for Plotting
-library(ggplot2)
-library(tidyr)
-
 df_long <- pivot_longer(df_res,
     cols = c("PctRed_ODE", "PctRed_OVE"),
     names_to = "Method",
