--- a/analytic_study.qmd
+++ b/analytic_study.qmd
@@ -1490,8 +1490,9 @@ Thus $\alpha=1$ is pure pre-emptive and $\alpha=0$ is pure reactive.
 #### Pre-emptive component
 
 A fraction $f_{\mathrm{pre}}=\alpha f$ is vaccinated regardless of
-whether an outbreak occurs: $$
-C_{\mathrm{pre}}^{(n)} = \alpha f\, [C_{\mathrm{V}} + p(1-\nu) C_{\mathrm{I}}],
+whether an outbreak occurs: 
+$$
+C_{\mathrm{pre}}^{(n)} = \alpha f\, [C_V + p(1-\nu) C_I],
 \qquad
 c_{\mathrm{pre}}^{(n)} = \alpha f [1 + p(1-\nu)R].
 $$
@@ -1503,7 +1504,8 @@ expected outbreak fraction is $p(1-\alpha f)$, while reactive capacity
 is $(1-\alpha)f$. Two regimes arise:
 
 -   Reactive-rich (enough reactive campaigns to cover all outbreaks
-    among the non-pre-emptive group): $$
+    among the non-pre-emptive group): 
+    $$
     (1-\alpha)f \;\ge\; p(1-\alpha f).
     $$
 
@@ -1511,13 +1513,13 @@ is $(1-\alpha)f$. Two regimes arise:
     (1-\alpha)f \;<\; p(1-\alpha f).
     $$
 
-##### Regime A: reactive-rich
+##### Reactive-rich regime
 
 Every outbreak among the non-pre-emptive group receives a reactive
 campaign. For any non-pre-emptive population, the expected cost is
 
--   outbreak w.p. $p$: $C_V + (1-r)C_I$
--   no outbreak w.p. $1-p$: $0$
+-   outbreak with probability $p$: $C_V + (1-r)C_I$
+-   no outbreak with probability $1-p$: $0$
 
 Hence 
 $$
@@ -1533,7 +1535,7 @@ c_{\mathrm{mixed}}^{(n)}(\alpha)
 \qquad \text{if } (1-\alpha)f \ge p(1-\alpha f).
 $$
 
-##### Regime B: reactive-limited
+##### Reactive-limited regime
 
 Only a fraction of outbreaks among the non-pre-emptive group can be
 reactively vaccinated. The fraction of outbreaks that receive a reactive
@@ -1543,9 +1545,12 @@ $$
 q(\alpha) = \frac{(1-\alpha)f}{p(1-\alpha f)} \in (0,1).
 $$
 
-Conditioning on an outbreak in the non-pre-emptive group: - with
-probability $q(\alpha)$: pay $C_V + (1-r)C_I$, -
-with probability $1-q(\alpha)$: pay $C_I$.
+Conditioning on an outbreak in the non-pre-emptive group: 
+
+
+- with probability $q(\alpha)$: pay $C_V + (1-r)C_I$, 
+
+- with probability $1-q(\alpha)$: pay $C_I$.
 
 A convenient simplification yields 
 $$
@@ -1596,12 +1601,14 @@ $(f-p)$ represents the **surplus capacity** available if acting purely reactivel
 Now, consider the "cost" of shifting doses to pre-emptive vaccination:
 
 1.  Net cost of one pre-emptive dose: 
+    
     When you use 1 dose pre-emptively:
-    -   You spend **1** dose from your stockpile.
-    -   You prevent an outbreak with probability $p$, saving **$p$** expected future reactive doses.
-    -   The **net reduction** in your surplus is $1 - p$. (This is the "waste" rate).
+    -   You spend 1 dose from your stockpile.
+    -   You prevent an outbreak with probability $p$, saving $p$ expected future reactive doses.
+    -   The **net reduction** in your surplus is $1 - p$.
 
 2.  Maximum allowable pre-emptive doses:
+
     How many pre-emptive doses ($D_{\mathrm{pre}}$) can you afford? You can continue until you have consumed your entire surplus:
     $$ D_{\mathrm{pre}} \times (\text{Net Cost}) = \text{Surplus} $$
     $$ D_{\mathrm{pre}} \times (1 - p) = f - p $$
@@ -1610,8 +1617,6 @@ Now, consider the "cost" of shifting doses to pre-emptive vaccination:
 3.  Converting to a fraction ($\alpha_c$):
     To find the critical *fraction* of your total capacity ($f$), we divide the allowable doses by the total supply $f$:
     $$ \alpha_c = \frac{D_{\mathrm{pre}}}{\text{total cpacity}} = \frac{\left( \frac{f - p}{1 - p} \right)}{f} = \frac{f - p}{f(1 - p)}. $$
-
-Thus, the factor $f(1-p)$ in the denominator arises from dividing the absolute surplus ($f-p$) by the waste rate ($1-p$) to get doses, and then dividing by $f$ to get the fraction.
 
 If $f \le p$, then $\alpha_c \le 0$ and the reactive-rich regime is
 not attainable for any $\alpha \in [0,1]$ (reactive capacity is always
@@ -1657,6 +1662,15 @@ $$
 R_{\mathrm{crit}} = \frac{1-p}{p(\nu-r)}.
 $$
 
+**Intuitive interpretation:**
+
+This threshold balances the risk of wasting pre-emptive doses against the benefit of superior protection during outbreaks:
+
+*   **Numerator ($1-p$):** The probability that an outbreak *does not* occur. In these scenarios, pre-emptive vaccines are effectively "wasted" compared to a reactive strategy (which would conserve those doses).
+*   **Denominator ($p(\nu-r)$):** The expected marginal benefit of pre-emptive vaccination. An outbreak occurs with probability $p$, and pre-emptive vaccination provides an effectiveness advantage of $(\nu - r)$ over reactive vaccination.
+
+Thus, $R_{\mathrm{crit}}$ represents the break-even point: we switch to pre-emptive vaccination only when the cost of infections ($R$) is high enough to justify the "insurance premium" of vaccinating before an outbreak is confirmed.
+
 Then
 
 $$
@@ -1685,96 +1699,7 @@ $R_{\mathrm{crit}}$ is the outbreak cost ratio at which these two options
 have equal expected cost; it increases as reactive effectiveness
 improves (as $1-r$ shrinks).
 
-Helper functions
 
-```{r}
-# Mixed strategy cost c_mix^{(n)}(alpha) = C_mix^{(n)} / C_V
-cost_mix_multi <- function(alpha, p, R, r, f, nu = 1) {
-  alpha <- pmax(pmin(alpha, 1), 0)
-
-  f_pre   <- alpha * f
-  f_react <- (1 - alpha) * f
-
-  # Reactive-rich among non-pre-emptive populations
-  cond_rich <- f_react >= p * (1 - f_pre)
-
-  c_rich <- f_pre * (1 + p * (1 - nu) * R) + (1 - f_pre) * p * (1 + (1 - r) * R)
-  c_lim  <- f + R * (p - f_pre * p * nu - f_react * r)
-
-  ifelse(cond_rich, c_rich, c_lim)
-}
-
-# Numerical optimizer over a grid (useful for plotting / validation)
-opt_alpha_equalrisk <- function(p, R, r, f, nu = 1, grid_len = 1001) {
-  alpha_grid <- seq(0, 1, length.out = grid_len)
-  costs <- cost_mix_multi(alpha = alpha_grid, p = p, R = R, r = r, f = f, nu = nu)
-
-  idx_min <- which.min(costs)
-
-  list(
-    alpha_star = alpha_grid[idx_min],
-    cost_star  = costs[idx_min],
-    alpha_grid = alpha_grid,
-    cost_grid  = costs
-  )
-}
-
-# Closed-form alpha^* for equal-risk multi-population case
-alpha_star_equalrisk <- function(p, R, r, f, nu = 1, eps = 1e-12) {
-  # r can be a vector
-  
-  # Scarce capacity: f <= p
-  if (f <= p + eps) {
-    # If r > p*nu -> pure reactive (0)
-    # If r < p*nu -> pure pre-emptive (1)
-    return(
-      ifelse(r > p * nu + eps, 0,
-      ifelse(r < p * nu - eps, 1, NA_real_))
-    )
-  }
-
-  # Abundant capacity: f > p
-  alpha_c <- (f - p) / (f * (1 - p))
-
-  alpha_star <- rep(NA_real_, length(r))
-
-  # r < p*nu -> pure pre-emptive
-  alpha_star[r < p * nu - eps] <- 1
-
-  # r > p*nu -> compare alpha=0 vs alpha=alpha_c
-  idx <- which(r > p * nu + eps)
-  if (length(idx) > 0) {
-    # R_thr = (1-p) / (p*(nu - r)) if nu > r
-    # If nu <= r, slope is positive => pure reactive (alpha=0)
-    
-    # We set alpha_star to 0 by default for these indices
-    alpha_star[idx] <- 0
-    
-    # Check where nu > r (slope could be negative)
-    # Actually, R_thr is valid only if nu > r. 
-    # If nu <= r, then 1-p + pR(r-nu) > 0 always (since 1-p>0, p>0, R>0, r>=nu).
-    # So if nu <= r, pure reactive is always better. 
-    
-    # We only consider switching to alpha_c if nu > r AND R >= R_thr
-    sub_idx <- idx[nu > r[idx] + eps] 
-    
-    if (length(sub_idx) > 0) {
-        # Calculate R_thr for these
-        R_vals_sub <- if(length(R)==1) rep(R, length(sub_idx)) else R[sub_idx]
-        
-        R_thr <- (1 - p) / (p * (nu - r[sub_idx]))
-        
-        # If R >= R_thr, switch to alpha_c
-        switch_mask <- R_vals_sub >= R_thr - eps
-        
-        # Map sub_idx back to alpha_star
-        alpha_star[sub_idx[switch_mask]] <- alpha_c
-    }
-  }
-
-  alpha_star
-}
-```
 
 #### $c_{\mathrm{mixed}}^{(n)}(\alpha)$ and $\alpha^*$
 
